# MarketAI

./: README.md
MarketAI/: README.md  pyproject.toml
MarketAI/output/content/: content_calendar.md
MarketAI/output/emails/: email_1.md  email_2.md
MarketAI/output/outreach/: outreach.md
MarketAI/output/posts/: post_1.md  post_2.md  post_3.md
MarketAI/output/research/: icp_research.md  market_research.md
MarketAI/output/strategy/: marketing_strategy.md
MarketAI/src/MarketAI/: crew.py  main.py
MarketAI/src/MarketAI/config/: agents.yaml  tasks.yaml
testing_project/: README.md  pyproject.toml
testing_project/resources/drafts/: content_calendar.md  email_1.md  email_2.md  icp_research.md  market_research.md  marketing_strategy.md  outreach.md  post_1.md  post_2.md
testing_project/resources/posts/: post_1.md
testing_project/src/testing_project/: crew.py  main.py
testing_project/src/testing_project/config/: tasks.yaml
