[project]
name = "MarketAI"
version = "0.1.0"
description = "MarketAIt using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai-tools>=1.9.3",
    "crewai[tools]==1.9.3",
    "email-validator>=2.1.0",
    "fastapi>=0.135.1",
    "litellm>=1.75.3",
    "pydantic>=2.11.10",
    "python-dotenv>=1.0.1",
]

[project.scripts]
MarketAI = "MarketAI.main:run"
run_crew = "MarketAI.main:run"
train = "MarketAI.main:train"
replay = "MarketAI.main:replay"
test = "MarketAI.main:test"
run_with_trigger = "MarketAI.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"