[project]
name = "testing_project"
version = "0.1.0"
description = "testing-project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai-tools>=1.9.3",
    "crewai[tools]==1.9.3",
    "fastapi>=0.135.1",
    "litellm>=1.75.3",
]

[project.scripts]
testing_project = "testing_project.main:run"
run_crew = "testing_project.main:run"
train = "testing_project.main:train"
replay = "testing_project.main:replay"
test = "testing_project.main:test"
run_with_trigger = "testing_project.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
